# trmnl-health-display

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: payload-example.json
launchd/: com.toto.trmnlhealth.plist
scripts/: bootstrap.sh  run_dashboard.sh
trmnl_health/: __init__.py  cli.py  data_sources.py  metrics.py  payload_builder.py  settings.py  state.py  trmnl_client.py
trmnl_health/templates/: dashboard.liquid
